style.css
  @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@700&family=Poppins:wght@600&display=swap');

  @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,700;1,700&family=Lato:wght@300&family=Poppins:wght@600&display=swap');

  @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@700&family=Lato:wght@300&family=Poppins:wght@600&display=swap');

*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    /* outline: 1px solid red; */
}
:root{
    --bg-light:#f7f0e8;
    --bg-blue:#4012cb;
    overflow-x: hidden;
}
html{
    scroll-behavior: smooth;
}
.common-padding{
    padding-right: 6.75rem;
}
a, a:hover, a:focus {
    text-decoration: none;
}

.navbar-nav > li {
    position: relative;
  }

.navbar-nav .nav-link.active::after {
    position: absolute;
    bottom: 0;
    left: 0;
    width: 100%;
    content: " ";
    border-bottom: 5px solid var(--bg-blue);
  }

.hero-right-section>h1,.inside-seminar-section .right>h1{
    font-family: 'IBM Plex Sans', sans-serif;
    font-size: 4.7rem;
    line-height: 70px;
}
.hero-right-section>h1{
    margin-bottom: 1.5rem;
}
.hero-right-section>p,.seminar-section-footer .right,.inside-seminar-section .left > p,.inside-seminar-section .right .row > p,.faq .right>p{
    font-family: 'Lato', sans-serif;
    font-size: 0.75rem;
}
.hero-right-section>button,.page-2 .seminar-section>button{
    border-color: var(--bg-blue);
    border-width: 3px;
    color: var(--bg-blue);
    font-weight: 500;
}
.hero-section-second-coloumn-para,.seminar-section-footer{
    font-family: 'IBM Plex Sans', sans-serif;
    font-style: italic;
    font-size: 33.34px;
}
.hero-section-second-coloumn-para>p,.seminar-section-footer .left{
    line-height: 18px;
}
.hero-section-second-coloumn-para>p>span,.seminar-section-footer .left>span{
    font-size: 20.34px;
}
.divider-one{
    background-color: var(--bg-blue);
}
.divider-one .section-common-style > h1{
    border-bottom: 5px solid var(--bg-light);
}
.divider-one .section-common-style > p{
    font-family: 'Lato', sans-serif;
    font-size: 12.5px;
    position: relative;
}
.seminar-section{
    margin-bottom: 180px;
}

.seminar-section > h1{
    margin-bottom:  50px;
    font-size: clamp(3.25rem,14vw,6rem);
    line-height: clamp(75px,14vw,100px);
    position: relative;
}
.seminar-section > h1::before,.main-container .subcontainer > h1::before{
    position: absolute;
    content:"\201C";
    transform: translateX(-2.3rem);
    font-weight: bold;
}
.seminar-section > h1::after,.main-container .subcontainer > h1::after{
    position: absolute;
    content:"\201D";
    font-weight: bold;
}
.inside-seminar-section{
    background-color: var(--bg-blue);
}
.seminar-section-footer .right{
    font-style: normal;
}
.inside-seminar-section .left{
    position: relative;
    overflow: hidden;
}
.inside-seminar-section .left::before{
    content: "";
    position: absolute;
    background-color: antiquewhite;
    height: 95%;
    width:5px;
    right: 0;
}
.inside-seminar-section .right .row{
    margin-top: 75px;
}
.inside-seminar-section .right .row>img{
    margin-top: 40px;
    height:50px;
    width: 100px;
    margin-bottom: 30px;
}

.inside-seminar-section .left>h1{
    font-size: 2.6rem;
    line-height: 48px;
    margin-bottom: 20px;
}
.inside-seminar-section .left>button{
    background-color: aliceblue;
    color:var(--bg-blue);
    font-weight: 500;
    margin-top: 40px;
}
.inside-seminar-section .right>h1{
    font-size: 4.3rem;
    line-height: 4.5rem;
}
.page-3{
    color: white;
    background-image: url(./img/6504025\ \(1\).webp);
    background-size: cover;
    background-position: center center;
}
.page-3 .main-container{
    height: 80%;
    margin-top: 7rem;
}
.main-container .subcontainer > h1::before{
    transform: translateX(-16px);
}
.main-container .subcontainer > h1{
    position: relative;
}
.main-container .subcontainer .btn{
    color: white;
    transition: 0.1s;
    font-weight: 500;
}
.main-container .subcontainer .btn:hover{
    background-color:var(--bg-light);
    color: black;
    font-weight: 500;
}
.main-container>h1{
    font-size:90px;
}

.page-4, .page-4>.row{
    height: 50vh;
}
.page-4-inner, .page-4-inner-2,.page-4-coloumn{
    position: relative;
}
.page-4-inner::after, .page-4-inner-2::after,.page-4-coloumn::after{
    content: "";
    position: absolute;
    background-color: antiquewhite;
    height: 100%;
    width:5px;
    right: 0;
}
.page-4-inner::before, .page-4-inner-2::before,.page-4-coloumn::before{
    content: "";
    position: absolute;
    background-color: antiquewhite;
    height: 100%;
    width:5px;
    left: 0;
}
.page-4-coloumn::after{
    top:0;
}
.page-4{
    background-color: var(--bg-blue);
}
.form-group>input{
    background-color: transparent;
    color: var(--bg-light);
}
.form-group>input::placeholder{
    color: var(--bg-light);
}
.form>button{
    color: var(--bg-blue);
    font-weight: 500;
}

/* accordion */
.faq{
    margin-top: 10px ;
    margin-bottom: 30px;
}
.faq .wrapper{
    background-color:transparent;
    width:95%;
    height:100%;
    margin-right: 1rem;
    line-height:1.5;
  }
  .faq .accordion{
    padding:1rem;
    width: 90%;
  }
  .faq .panel{
    padding:1rem;
  }
  .faq .head:hover {
    border-width: 3px;
    box-shadow: 0px 2px 3px 0px;
  }
  .faq .head{
    padding-bottom:0.5rem;
    position:relative;
    border:1px solid var(--bg-blue); 
    transition: border-width 0.05s;
  }
  .btns{
    border:0;
    background:transparent;
    font-size:clamp(1rem,10vw,1.5rem);
    font-weight:500;
    width:100%;
    text-align:center;
  }
  .faq .content{
    display:grid;
    grid-template-rows:0fr;
    transition: grid-template-rows 0.6s
  }
  .faq .content > div{
    overflow:hidden;
  }
  .faq .content[aria-hidden="false"]{
    grid-template-rows:1fr;
  }
  
  .faq .btns::after,
  .faq .btns::before{
    content:"";
    position:absolute;
    display:block;
    width:1rem;
    height:5px;
    background:#ffcab0;
    right:10%;
    transition:transform 0.5s
  }
  .faq .accordion .btns::before{
    translate:0 1.1rem;
    rotate:90deg;
  }
  .faq .accordion .btns::after{
    translate:0 -1.2rem;
  }
  .faq .accordion .btns[aria-expanded="true"]::before,
  .faq .accordion .btns[aria-expanded="true"]::after{
    transform:rotate(45deg);
  }
  .faq .right>button{
    font-weight: 500;
  }
  .faq .right > p{
    position: relative;
  }
  .faq .right > p::before{
    content: " ";
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;  
    border-bottom: 5px solid var(--bg-blue);
  }
.footer{
    margin-top: 4rem;
    background-color: var(--bg-blue);
}
.footer .main-content .list{
    list-style: none;
}
.footer .main-content .list>li{
    font-weight: 200;
    font-family: 'Lato', sans-serif;
}
.footer .main-content .list>li>a{
    padding-bottom: 0.5rem;
    text-decoration: underline;
    text-decoration-thickness: 3px;
    text-decoration-color: var(--bg-light);
    text-underline-offset: 5px;
}
.footer .main-content .list>li>a:hover{
    opacity: 0.6;
}



@media only screen and (max-width: 1200px) {
    .hero-img{
        display:none;
    }
    
  }

  @media only screen and (max-width: 600px) {
    .hero-right-section>h1,.inside-seminar-section .right>h1{
        font-size: clamp(2rem,10vw,3.5rem);
        line-height:clamp(1.5rem,8vw,3rem);
        margin-bottom: 2rem;
    }
    .small-nav-small-screen{
        width: 75%;
    }
    .faq .right{
        margin-left: 1rem;
    }
  }
  @media only screen and (max-width: 768px){
    .seminar-section-footer{
        flex-direction: column;
        align-items: center; 
        margin-top: 5px;     
    }
    .seminar-section-footer .right{
        width: 70% !important;
        margin-top: 5px;
    }
  }
  

